fixed layout issues

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,5 +1,6 @@
 body,
 html {
+	margin: 0;
 	width: 100%;
 }
 
@@ -8,8 +9,11 @@ header {
 	display: flex;
 	width: 100%;
 	height: 80px;
+	position: fixed;
+	z-index: 1;
 	align-items: center; 
 	border-bottom: 1px solid black;
+	background-color: white;
 	font-size: 14px;
 	font-weight: bold;
 }
@@ -40,37 +44,37 @@ nav span {
 	padding: 20px 10px;
 }
 
-section {
+.content {
 	display: flex;
-	border: 1px solid black;
-	margin: 0 auto;
-	max-width: 1266px;
+	margin: 0 auto 78px auto;
+	width: 1270px;
+	padding-top: 116px;
 }
 
 .column {
 	display: flex;
 	flex-direction: column;
-	border: 1px solid black;
 	margin-right: 32px;
-	margin-top: 30px;
 }
 
 .column.large {
-	width: 630px;
-	flex: 3 1 auto;
+	width: 630px;	
 }
 
 .column.medium {
-	width: 300px;
-	flex: 2 1 auto;
+	width: 300px;	
 }
 
 .column.small {
-	width: 240px;
-	flex: 1 1 auto;
+	width: 240px;	
 }
 
-h6 {
+div {
 	border: 1px solid black;
 }
+
+article {
+	border: 1px solid black;
+}
+
 
